# learning-python

./: README.org  default.nix  pyproject.toml  shell.nix
learning_python/: __init__.py
